# project-utility

./: .env.example  .gitignore  README.md  cloudflare-dns.py  git-clone-alot.bat  git-clone-alot.txt  git-pull-alot.bat  github-clone.py  github-integrity.py  github-pull.py  github-repository.py  nginx-formatter-webui.py  nginx-formatter.py  png-to-favicon.py  project-list.bat  qt-env.md  qt6-env.cmd  ssh-deploy-github-permission-template.bat  ssh-deploy-github-permission.sh  ssh-deploy.bat  ssh-rsa-login-template.bat  ssh-rsa-login.bat  ssh-tunnel-template.bat  ssh-tunnel.bat  vmws-lab-ubu.bat  vscode.md
template/: ai.md  environment.md  fltk.md  keycloak.md  keyfactor-signserver.md  kubernetes.md  linux.md  nginx.md  podman.md  postgresql.md  remote.md  tampermonkey.md  uboot.md  ubuntu.md
template/android/: tfirefly-roc-rk3568-pc-se.md
template/cmake-traywinmain/: CMakeLists.txt  README.md  main.cpp
template/front-end/: nav-prototype.html
template/gtk4-cmake/: CMakeLists.txt  README.md
template/gtk4-cmake/src/: main.c
template/keycloak/: keycloak.md
template/keycloak/client-nextjs/: README.md  package-lock.json  package.json
template/keycloak/client-nextjs-1/: next.config.ts
template/keycloak/client-nextjs-1/lib/: keycloak.ts
template/keycloak/client-nextjs/app/: page.tsx
template/vscode-cmake-gcc/: CMakeLists.txt
template/yocto/: yocto-common.md  yocto-karo-cross-hello-world.patch  yocto-karo-qs93sv01.md  yocto-stm32mp135f-dk.md  yocto-stm32mp257fdk.md  yocto4-stm32mp135f-dk.md  yocto4-ubuntu2204.md
